[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["IAbulizi <izdar.abulizi@outlook.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
tqdm = "^4.66.1"
parse = "^1.20.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
